HH-127748 no guava in internals