@@ -1,6 +1,5 @@
 package ru.hh.consul;
 
-import com.google.common.collect.ImmutableMap;
 import ru.hh.consul.config.ClientConfig;
 import ru.hh.consul.model.coordinate.Coordinate;
 import ru.hh.consul.model.coordinate.Datacenter;
@@ -10,7 +9,6 @@ import retrofit2.Retrofit;
 import retrofit2.http.GET;
 import retrofit2.http.QueryMap;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -48,7 +46,7 @@ public class CoordinateClient extends BaseClient {
     }
 
     private Map<String, String> dcQuery(String dc) {
-        return dc != null ? ImmutableMap.of("dc", dc) : Collections.emptyMap();
+        return dc != null ? Map.of("dc", dc) : Map.of();
     }
 
     /**
